# tacks

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-03-05-221431_create_shots/: down.sql  up.sql
migrations/2023-03-08-025127_create_games/: up.sql
src/: game.rs  lib.rs  main.rs  models.rs  schema.rs  shot.rs
