[package]
name = "tacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
csv = "1.2.0"
diesel = { version = "2.0.0", features = ["128-column-tables", "postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
